# ContinentalHydroTools

./: .gitignore  CMakeLists.config.template  CMakeLists.txt  CPackConfig.cmake  ContinentalHydroTools.sln  ContinentalHydroTools.vcxproj  ContinentalHydroTools.vcxproj.filters  README.md  install_win.bat
assets/unittest/: rioSinos_fac.asc  rioSinos_fdr.asc  rioSinos_str.asc  rioSinos_strseg.asc
cmake/: ContinentalHydroToolsConfig.cmake.in  FindSHAPELIB.cmake  FindSHP.cmake
console/: CMakeLists.txt
console/src/: TestCommand.cpp  main.cpp
include/continental/hydrotools/: Catchment.h  Cell.h  CellWatershed.h  FlowAccumulation.h  FlowDirection.h  HeuristicCell.h  HeuristicSinkRemoval.h  HeuristicSinkRemovalUtil.h  JunctionCell.h  LengthSegmentation.h  StreamAccumLength.h  StreamDefinition.h  StreamSegmentation.h  TestCommand - Copia.h  TestCommand.h  Version.h
include/continental/hydrotools/command/: AbstractCommand.h  CatchmentCommand.h  FlowAccumulation.h  SinkDestroyCommand - Copia.h  StreamDefinitionCommand.h  WatershedDelineationCommand.h
include/continental/hydrotools/constant/: MensageConstant.h
include/continental/hydrotools/domain/: AbstractCommandInput.h  FileCommand.h  FileCommandInput.h  FileCommandOutput.h  FlowAccumulationCommandInput.h  HeuristicSinkRemovalCommandInput.h  HydrotoolsProcessType.h  InputHandler.h  Raster.h  StreamDefinitionCommandInput.h  StreamDefinitionThresholdType.cpp  StreamDefinitionThresholdType.h  StreamSegmentationCommandInput.h  WatershedDelineationCommandInput.h
include/continental/hydrotools/exception/: CatchmentDelineationIsNotValidInputCommandException.h  CatchmentDelineationProcessException.h  FileNotFoundException.h  FlowAccumulationIsNotValidInputCommandException.h  FlowAccumulationProcessException.h  SinkDestroyIsNotValidInputCommandException.h  SinkDestroyProcessException.h  StreamDefinitionIsNotValidInputCommandException.h  StreamDefinitionProcessException.h  StreamSegmentationIsNotValidInputCommandException.h  StreamSegmentationProcessException.h  WatershedDelineationIsNotValidInputCommandException.h  WatershedDelineationProcessException.h
include/continental/hydrotools/infrastructure/: AbstractRasterIO.h  RasterIO.h
include/continental/hydrotools/service/: CellWatershed.h  FlowAccumulation.h  FlowDirection.h  HeuristicSinkRemoval.h  HeuristicSinkRemovalUtil.h  LengthSegmentation.h  StreamAccumLength.h  StreamDefinition.h
include/continental/hydrotools/shape/: Box.h  Part.h  Point.h  ShapeFile.h  ShapeObject.h
include/continental/hydrotools/util/: HDF5Util.h
install/debug/include/continental/hydrotools/: Version.h
install/debug/include/continental/hydrotools/command/: FlowAccumulation.h  SinkDestroyCommand.h  StreamDefinitionCommand.h
install/debug/include/continental/hydrotools/domain/: CatchmentCommandInput.h  StreamDefinitionCommandInput.h
install/debug/include/continental/hydrotools/exception/: CatchmentDelineationProcessException.h  SinkDestroyIsNotValidInputCommandException.h  SinkDestroyProcessException.h  WatershedDelineationProcessException.h
install/debug/include/continental/hydrotools/infrastructure/: AbstractRasterIO.h  RasterIO.h
install/debug/include/continental/hydrotools/service/: Catchment.h  CellWatershed.h  HeuristicSinkRemoval.h  HeuristicSinkRemovalUtil.h  JunctionCell.h  LengthSegmentation.h  StreamSegmentation.h
install/debug/lib/cmake/ContinentalHydroTools/: ContinentalHydroToolsConfig.cmake  ContinentalHydroToolsTargets-debug.cmake
install/release/include/continental/hydrotools/command/: AbstractCommand.h  CatchmentCommand.h  StreamSegmentationCommand.h  WatershedDelineationCommand.h
install/release/lib/cmake/ContinentalHydroTools/: ContinentalHydroToolsTargets-release.cmake  ContinentalHydroToolsTargets.cmake
src/: Catchment.cpp  Cell.cpp  CellWatershed.cpp  FlowAccumulation.cpp  FlowDirection.cpp  HeuristicCell.cpp  HeuristicSinkRemoval.cpp  HeuristicSinkRemovalUtil.cpp  JunctionCell.cpp  LengthSegmentation.cpp  Readme.h  ShapeObject.cpp  StreamAccumLength.cpp  StreamDefinition.cpp  StreamSegmentation.cpp  Version.cpp
src/command/: AbstractCommand.cpp  CatchmentCommand.cpp  FlowAccumulationCommand.cpp  SinkDestroyCommand.cpp  StreamDefinitionCommand.cpp  StreamSegmentationCommand.cpp  WatershedDelineationCommand.cpp
src/constant/: MensageConstant.cpp
src/domain/: AbstractCommandInput.cpp  CatchmentCommandInput - Copia.cpp  CatchmentCommandInput.cpp  CatchmentCommandInput.h  FileCommand.cpp  FileCommandInput.cpp  FileCommandOutput.cpp  FlowAccumulationCommandInput.cpp  HeuristicSinkRemovalCommandInput.cpp  HydrotoolsProcessType.cpp  ICommandInput - Copia.cpp  InputHandler.cpp  Raster.cpp  StreamDefinitionCommandInput.cpp  StreamDefinitionThresholdType.cpp  StreamSegmentationCommandInput.cpp  WatershedDelineationCommandInput.cpp
src/exception/: CatchmentDelineationIsNotValidInputCommandException.cpp  CatchmentDelineationProcessException.cpp  FileNotFoundException.cpp  FlowAccumulationIsNotValidInputCommandException.cpp  FlowAccumulationProcessException.cpp  SinkDestroyIsNotValidInputCommandException.cpp  SinkDestroyProcessException.cpp  StreamDefinitionIsNotValidInputCommandException.cpp  StreamDefinitionProcessException.cpp  StreamSegmentationIsNotValidInputCommandException.cpp  StreamSegmentationProcessException.cpp  WatershedDelineationIsNotValidInputCommandException.cpp  WatershedDelineationProcessException.cpp
src/infrastructure/: AbstractRasterIO.cpp  RasterIO.cpp  RasterIO.h
src/service/: Catchment.cpp  Cell.cpp  CellWatershed.cpp  FlowAccumulation.cpp  FlowDirection.cpp  HeuristicCell.cpp  HeuristicSinkRemoval.cpp  HeuristicSinkRemovalUtil.cpp  JunctionCell.cpp  StreamAccumLength.cpp  StreamDefinition.cpp  StreamSegmentation.cpp
src/service/shape/: Box.cpp  Part.cpp  Point.cpp  ShapeFile.cpp  ShapeObject.cpp
src/shape/: Box.cpp  Part.cpp  Point.cpp  ShapeFile.cpp  ShapeObject.cpp
src/util/: HDF5Util.cpp  HydroToolsUtil.cpp
test/: CMakeLists.txt
test/src/: TestCommand.cpp  main.cpp
(+21 files in other folders)
